--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,8 +1,6 @@
 on:
-    push:
-        branches: ["main"]
-    pull_request:
-        branches: ["main"]
+    release:
+        types: [created]
 
 permissions:
     contents: write
