--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,3 +1,5 @@
+name: Release TBB binaries
+
 on:
     release:
         types: [created]
@@ -17,4 +19,3 @@ jobs:
                   github_token: ${{ secrets.GITHUB_TOKEN }}
                   goos: linux
                   goarch: amd64
-                  release_tag: "lol"
